# django_bridge

./: .env.example  .env.sample  .gitignore  404.html  BUILD_PROCESS.md  CLAUDE.md  Cargo.toml  Makefile.toml  booster.bat  card_filtering.md  check_cardtype.py  check_cardtype_distribution.py  check_cardtype_distribution_simple.py  check_opera_card.py  check_rawcard_opera.py  debug_opera_html.py  extra_filter.md  index.html  input-68f97e456d3780b1.css  input-a67aace88bf1dca5.css  input-b31f7d2663ad8a2c.css  input-b8fe24395bb2be4.css  investigate_key_cards.py  manifest.json  manual_analyze.md  memo.txt  memo0605.md  pub.sh  pub.txt  readme.md  reanalyze_opera.py  reanalyze_opera_u.py  sample.http  sample_rawcard_analysis.py  starter.bat  sync_test.md  test_card_type_check.py  wasm_front-25266b4c96396310.js  wasm_front-25266b4c96396310_bg.wasm  wasm_front-5b34fe45e160b0e7.js  (+7 more)
analyze_card/: Cargo.toml
analyze_card/examples/: insert_one.rs  judge_card_types.rs  parse_arts.rs  parse_arts_craft.rs  parse_key.rs  parse_key2.rs  parse_limit_ex.rs  parse_lrig.rs  parse_lrig_assist.rs  parse_piece.rs  parse_piece_relay.rs  parse_resona.rs  parse_resona_craft.rs  parse_signi.rs  parse_signi_dissona.rs  parse_signi_with_limit.rs  parse_skill_damage.rs  parse_spell.rs  parse_spell_craft.rs  parse_token.rs  parse_token2.rs  parse_token3.rs  scrape.rs  scrape_single.rs
analyze_card/src/: lib.rs
analyze_card/src/wixoss/: card_type.rs  constants.rs  feature.rs  format.rs  mod.rs
analyze_card/src/wixoss/card/: arts.rs  arts_craft.rs  key.rs  lrig.rs  lrig_assist.rs  mod.rs  piece.rs  signi.rs  (+5 more)
analyzer/: CLAUDE.md  Cargo.toml
analyzer/examples/: debug_card_type_analyzer.rs  test_raw_card_analyzer.rs  text_analysis.rs
analyzer/src/: card_analyzer.rs  klass_cache.rs  lib.rs  main.rs  raw_card_analyzer.rs  test_field_extraction.rs
analyzer/tests/: analyzer_replacement_test.rs  card_analyzer_test.rs  integration_test.rs  regex_test.rs  replacement_test.rs
analyzer/tests/common/: mod.rs
datapack/: Cargo.toml
datapack/examples/: debug_card_types.rs  filter_test.rs  internal_function_test.rs  shared_function_test.rs  test_burst_bits.rs  test_card_type_filter.rs  test_feature_labels.rs  test_new_fields.rs  wasm_function_test.rs
datapack/src/: extract.rs  filter.rs  lib.rs  text_search.rs
fixed_data_server/: Cargo.toml  README.md  build.rs
fixed_data_server/proto/: admin.proto
fixed_data_server/src/: main.rs  sync.rs
fixed_data_server/src/db/: repository.rs
fixed_data_server/src/handlers/: analyze.rs  import_export.rs  mod.rs  overrides.rs  sync.rs
fixed_data_server/src/models/: feature_override.rs  mod.rs
rule_editor/: .gitignore  Cargo.toml  README.md  build.rs
rule_editor/src/: main.rs  web_server.rs
rule_editor/src-tauri/: tauri.conf.json
rule_editor/src/commands/: database.rs  mod.rs  openai.rs  pattern.rs
rule_editor/src/models/: mod.rs  rule_pattern.rs
rule_editor/ui/: nuxt.config.ts  package.json
rule_editor/ui/components/: PatternPreview.vue  SavedPatterns.vue  SearchInput.vue  SentenceList.vue
rule_editor/ui/composables/: useApi.ts  useTauri.ts
rule_editor/ui/pages/: index.vue
scraper/: Cargo.toml
scraper/src/: db.rs  main.rs  raw_card.rs  scraping.rs
shared/cacher/: Cargo.toml  README.md
shared/cacher/examples/: cache_product.rs
shared/cacher/src/: config.rs  error.rs  lib.rs  main.rs  product_cacher.rs  search_query.rs
shared/webapp/: .gitignore  Cargo.toml  booster.bat  sample.sql  starter.bat
shared/webapp/examples/: analyze_raw_card_from_db.rs  insert_one.rs  judge_card_types.rs  parse_arts.rs  parse_arts_craft.rs  parse_key.rs  parse_key2.rs  parse_limit_ex.rs  parse_lrig.rs  parse_lrig_assist.rs  parse_multi_color.rs  parse_multi_klass.rs  parse_multi_timings.rs  parse_piece_relay.rs  parse_resona.rs  parse_resona_craft.rs  parse_signi.rs  parse_signi_dissona.rs  parse_signi_with_limit.rs  parse_skill_damage.rs  parse_spell.rs  parse_spell_craft.rs  parse_token2.rs  parse_token3.rs  proxy_router.rs  run_subprocess.rs  scrape.rs  scrape_single.rs  test_analyze_with_card_type.rs  test_card_type_detection.rs  test_fetch_product.rs
shared/webapp/src/: lib.rs  state.rs
sqlm/: Cargo.toml  Makefile.toml  build.rs  syncdb.bat
sqlm/examples/: django_auth.rs  get_code.rs  proxy_router.rs  run_subprocess.rs
sqlm/src/: admin_process.rs  main.rs  models.rs  syncdb.rs  tokiort.rs
wasm_front/: CLAUDE.md  CNAME  Cargo.toml  Trunk-pages.toml  Trunk.toml  asset_issues.md  build-pages.sh  gh-pages-404.html  index.html  input.css  leptos.md  tailwind.config.js
wasm_front/src/: main.rs  types.rs
wasm_front/src/components/: burst_feature_overlay.rs  card_item.rs  card_list.rs  card_type_selector.rs  clear_all_button.rs  color_selector.rs  feature_overlay.rs  feature_shortcuts.rs  klass_overlay.rs  level_selector.rs  mod.rs  navbar.rs  overlay_button.rs  pagination.rs  power_selector.rs  product_overlay.rs  product_selector.rs  scroll_to_top_button.rs  skill_text_renderer.rs  svg_definition.rs  svg_toggle_switch.rs  text_search.rs  timing_selector.rs  toggle_switch.rs
wasm_front/src/contexts/: filter_context.rs  mod.rs
wasm_front/src/pages/: card.rs  card_detail.rs  credits.rs  feature_edit.rs  home.rs  mod.rs
wasm_front/src/utils/: api.rs  maintenance.rs  mod.rs
webapp/: Cargo.toml  sample.sql
webapp/examples/: django_auth.rs  insert_one.rs  judge_card_types.rs  parse_arts.rs  parse_arts_craft.rs  parse_limit_ex.rs  parse_lrig.rs  parse_lrig_assist.rs  parse_multi_color.rs  parse_multi_klass.rs  parse_multi_timings.rs  parse_multicolor.rs  parse_piece.rs  parse_piece_relay.rs  parse_signi.rs  parse_signi_dissona.rs  parse_spell.rs  parse_token.rs  proxy_router.rs  scrape.rs  scrape_single.rs  test_fetch_product.rs
webapp/src/: admin_process.rs  lib.rs  models.rs  state.rs  syncdb.rs
webapp/src/analyze/: mod.rs
webapp/src/models/: card.rs  cardtype.rs  klass.rs  mod.rs  product.rs
webapp/src/repositories/: card.rs  cardtype.rs  klass.rs  mod.rs  product.rs
webapp/src/routers/: card_router.rs  mod.rs  product_router.rs
(+217 files in other folders)
