[workspace]
members = [
    "datapack",
    "server", "static_generator",
    "syncdb",
    "shared/webapp"
]

resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["tokio"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
