[workspace]
members = [
    "datapack",
    "server", "static_generator",
    "syncdb",
    "shared/webapp",
    "shared/models",
    "shared/feature", "shared/color", "shared/cacher", "shared/injector"]

resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "1.0.0-rc.3"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
