[workspace]
members = [
    "datapack",
    "server", "static_generator",
    "syncdb", "scraper",
    "shared/webapp",
    "shared/models",
    "shared/feature", "shared/color", "shared/cacher", "shared/injector",
    "wasm_front", "analyzer", "rule_editor", "icon_encoder", "fixed_data_server"]

resolver = "2"

[workspace.dependencies]
# 既存の依存関係
axum = { version = "0.8.4", features = ["tokio"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "1.0.0-rc.3"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "fs"] }

# 2箇所以上で使用されている依存関係
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.37"
thiserror = "1.0"
url = "2.5"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units
panic = 'abort'     # Remove panic unwinding to reduce binary size
strip = true        # Strip symbols from binary
