[package]
name = "analyze_card"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_qs = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["cookies", "multipart"] }
scraper = "0.17.1"
async-recursion = "1.0.5"
regex = "1.9.6"
sqlx = "0.8.3"
dotenvy = "0.15.7"
webapp = { path = "../webapp" }