[package]
name = "analyze_card"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = "0.13.0"
tokio = { workspace = true }
reqwest = { version = "0.12.12", features = ["cookies", "multipart"] }
scraper = "0.23.1"
async-recursion = "1.1.1"
regex = "1.9.6"
sqlx = { workspace = true }
dotenvy = { workspace = true }
webapp = { path = "../webapp" }