[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[lib]
name = "analyzer"
path = "src/lib.rs"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
feature = { path = "../shared/feature" }
models = { path = "../shared/models" }
color = { path = "../shared/color" }
tokio = { workspace = true }
rayon = "1.10"
async-trait = "0.1"
chrono = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
