[package]
name = "datapack"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
web-sys = "0.3.77"

feature = { path = "../shared/feature" }
color = { path = "../shared/color" }

