[package]
name = "fixed_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

# gRPC dependencies for admin_backend integration
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# 共有モジュールを使用
models = { path = "../shared/models" }
webapp = { path = "../shared/webapp" }
feature = { path = "../shared/feature" }

[build-dependencies]
tonic-build = "0.12"