[package]
name = "rule_editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# OpenAI API用
async-openai = "0.24"

# 共有クレート
models = { path = "../shared/models" }
feature = { path = "../shared/feature" }

[features]
default = []
gui = ["tauri", "tauri-build"]
custom-protocol = ["tauri/custom-protocol"]