[package]
name = "wxdb-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wxdb-scraper"
path = "src/main.rs"

[dependencies]
# ワークスペース共通の依存関係
tokio = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

# 追加の依存関係
scraper_html = { package = "scraper", version = "0.20" }
async-recursion = "1.1"
chrono = { workspace = true }
regex = { workspace = true }

# ローカルクレート
models = { path = "../shared/models" }
webapp = { path = "../shared/webapp" }
feature = { path = "../shared/feature" }