[package]
name = "sqlm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "syncdb"
path = "src/syncdb.rs"
required-features = ["generator-deps"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }

rustpython-parser = { version = "0.4.0", optional = true }
rustpython-parser-core = { version = "0.4.0", optional = true }
serde = "1.0.217"
serde_json = "1.0.138"
base64 = "0.22.1"
ring = "0.17.9"

[features]
generator-deps = ["dep:rustpython-parser", "dep:rustpython-parser-core"]