[package]
name = "sqlm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "syncdb"
path = "src/syncdb.rs"
required-features = ["generator-deps"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }

rustpython-parser = { version = "0.4.0", optional = true }
rustpython-parser-core = { version = "0.4.0", optional = true }
serde = "1.0.217"
serde_json = "1.0.138"
base64 = "0.22.1"
ring = "0.17.9"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
axum = { version = "0.8.1", features = ["tokio"] }
winapi = { version = "0.3.9", features = ["winbase", "wincon"] }
nix = "0.29.0"
rand = "0.9.0"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client"] }
pin-project-lite = "0.2.16"
dotenvy = "0.15.7"

[features]
generator-deps = ["dep:rustpython-parser", "dep:rustpython-parser-core"]

