[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = "0.22.1"
ring = "0.17.9"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
axum = { workspace = true }
winapi = { version = "0.3.9", features = ["winbase", "wincon"] }
nix = "0.29.0"
rand = "0.9.0"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client"] }
pin-project-lite = "0.2.16"
dotenvy = { workspace = true }
