[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
webapp = { path = "../webapp" }
models = { path = "../models" }
tokio = { workspace = true }
futures = "0.3.31"
rand = "0.9.1"
sqlx = "0.8.6"
clap = { version = "4.5.39", features = ["derive"] }
url = "2.5.4"
serde_qs = { workspace = true }
dotenvy = { workspace = true }
reqwest = { version = "0.12.16", features = ["cookies", "multipart"] }