[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
webapp = { path = "../webapp" }
models = { path = "../models" }
tokio = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
serde_qs = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "multipart"] }