[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_qs = "0.13.0"
base64 = "0.22.1"
ring = "0.17.11"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
axum = { workspace = true }
winapi = { version = "0.3.9", features = ["winbase", "wincon"] }
nix = { version = "0.29.0", features = ["process", "signal"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["cookies", "multipart"] }
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client"] }
pin-project-lite = "0.2.16"
dotenvy = { workspace = true }
scraper = "0.23.1"
async-recursion = "1.1.1"
regex = "1.9.6"
url = "2.5.4"
serde_json = { workspace = true }
clap = { version = "4.5.32", features = ["derive"] }
models = { path = "../models" }
feature = { path = "../feature" }
color = { path = "../color" }
rayon = "1.10.0"
futures = "0.3.31"