[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
base64 = "0.22.1"
ring = "0.17.11"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.8"
axum = { workspace = true }
winapi = { version = "0.3.9", features = ["winbase", "wincon"] }
nix = { version = "0.30.1", features = ["process", "signal"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "multipart"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client"] }
pin-project-lite = "0.2.16"
dotenvy = { workspace = true }
scraper = "0.23.1"
async-recursion = "1.1.1"
regex = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
models = { path = "../models" }
feature = { path = "../feature" }
color = { path = "../color" }
analyzer = { path = "../../analyzer" }
rayon = "1.10.0"
async-trait = "0.1"
futures = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.19"
